--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/02engine/scratch-audio.git"
+    "url": "https://github.com/02engine/scratch-audio.git"
   },
   "license": "BSD-3-Clause",
   "bugs": {
